// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  aria-labelledby="responsive-dialog-title"
  fullScreen={false}
  fullWidth={true}
  maxWidth="md"
  onBackdropClick={[Function]}
  onEscapeKeyDown={[Function]}
  open={true}
>
  Dialog - 
  <div
    className="MuiDialogTitle-root-1"
    id="responsive-dialog-title"
  >
    <h2
      className="MuiTypography-root-2 MuiTypography-title-8"
    >
      Alterar imagem
    </h2>
  </div>
  <div
    className="MuiDialogContent-root-26"
  >
    <div
      accept="image/*"
      acceptStyle={
        Object {
          "border": "2px solid #239eb1",
        }
      }
      disableClick={false}
      multiple={false}
      onDrop={[Function]}
      rejectStyle={
        Object {
          "border": "2px solid #f44336",
        }
      }
      style={
        Object {
          "border": "1px dashed",
          "cursor": "pointer",
          "height": 400,
          "margin": "0 auto",
          "textAlign": "center",
          "width": 400,
        }
      }
    >
      Dropzone - 
      <h1
        className="MuiTypography-root-2 MuiTypography-headline-7"
        style={
          Object {
            "left": 50,
            "position": "absolute",
            "top": 150,
            "width": 300,
          }
        }
      />
    </div>
  </div>
  <div
    className="MuiDialogActions-root-27"
  >
    <div
      className="MuiDialogActions-action-28"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/profile"
    >
      <button
        className="MuiButtonBase-root-45 MuiButton-root-29 MuiButton-flatPrimary-31"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-30"
        >
          Cancelar
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
    </div>
    <button
      className="MuiButtonBase-root-45 MuiButtonBase-disabled-46 MuiButton-root-29 MuiButton-flatPrimary-31 MuiButton-disabled-39 MuiDialogActions-action-28"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-30"
      >
        Salvar
      </span>
    </button>
  </div>
</div>
`;

exports[`with file renders correctly 1`] = `
<div
  aria-labelledby="responsive-dialog-title"
  fullScreen={false}
  fullWidth={true}
  maxWidth="md"
  onBackdropClick={[Function]}
  onEscapeKeyDown={[Function]}
  open={true}
>
  Dialog - 
  <div
    className="MuiDialogTitle-root-1"
    id="responsive-dialog-title"
  >
    <h2
      className="MuiTypography-root-2 MuiTypography-title-8"
    >
      Alterar imagem
    </h2>
  </div>
  <div
    className="MuiDialogContent-root-26"
  >
    <div
      accept="image/*"
      acceptStyle={
        Object {
          "border": "2px solid #239eb1",
        }
      }
      disableClick={true}
      multiple={false}
      onDrop={[Function]}
      rejectStyle={
        Object {
          "border": "2px solid #f44336",
        }
      }
      style={
        Object {
          "border": "none",
          "cursor": "pointer",
          "height": 400,
          "margin": "0 auto",
          "textAlign": "center",
          "width": 400,
        }
      }
    >
      Dropzone - 
      <Avatar
        height={350}
        image={undefined}
        onPositionChange={[Function]}
        position={
          Object {
            "x": 0.5,
            "y": 0.5,
          }
        }
        scale={1}
        width={350}
      />
    </div>
    <div
      style={
        Object {
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      <button
        className="MuiButtonBase-root-45 MuiIconButton-root-55"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-60"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-61"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zM7 9h5v1H7z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-45 MuiIconButton-root-55"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-60"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-61"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zm2.5-4h-2v2H9v-2H7V9h2V7h1v2h2v1z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiDialogActions-root-27"
  >
    <div
      className="MuiDialogActions-action-28"
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/profile"
    >
      <button
        className="MuiButtonBase-root-45 MuiButton-root-29 MuiButton-flatPrimary-31"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-30"
        >
          Cancelar
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
    </div>
    <button
      className="MuiButtonBase-root-45 MuiButton-root-29 MuiButton-flatPrimary-31 MuiDialogActions-action-28"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-30"
      >
        Salvar
      </span>
      <span
        className="MuiTouchRipple-root-48"
      />
    </button>
  </div>
</div>
`;
